<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_profil">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fragment_profil" />
    <EditText
        android:id="@+id/edit_profil_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/profil_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/edit_profil_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_profil_nom"
        android:layout_alignStart="@+id/edit_profil_nom"
        android:layout_below="@+id/edit_profil_nom"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/profil_email"
        android:inputType="textEmailAddress" />

        <EditText
        android:id="@+id/edit_profil_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_profil_mail"
        android:layout_alignStart="@+id/edit_profil_mail"
        android:layout_below="@+id/edit_profil_mail"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/profil_number"
        android:inputType="phone" />
    <Button
        android:id="@+id/btn_profil_save"
        android:layout_marginTop="18dp"
        android:layout_width="@dimen/button_margin"
        android:layout_height="@dimen/button_margin"
        android:layout_centerInParent="true"
        android:layout_below="@+id/edit_profil_phone"
        android:background="?attr/colorAccent"
        android:drawableRight="@drawable/ic_save"/><!--image drawable on Right side of Text on button-->

</RelativeLayout>
