<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_home">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/home_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_home_vide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_instruction"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_menu"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"

                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu" />

                <TextView
                    android:id="@+id/textV_home_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"

                    android:gravity="center_vertical"
                    android:text="@string/home_menu" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_fingerprint"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_fingerprint" />

                <TextView
                    android:id="@+id/textV_home_fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_profil" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_motorcycle"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_motorcycle" />

                <TextView
                    android:id="@+id/textV_home_motorcycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_motor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_today"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_today" />

                <TextView
                    android:id="@+id/textV_home_today"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_when" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_location"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_add_location" />

                <TextView
                    android:id="@+id/textV_home_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_local" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_manage"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_manage" />

                <TextView
                    android:id="@+id/textV_home_manage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_manage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_receipt"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_receipt" />

                <TextView
                    android:id="@+id/textV_home_receipt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"

                    android:gravity="center_vertical"
                    android:text="@string/home_recap" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textV_home_share_us"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_share_us"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_share"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_share" />

                <TextView
                    android:id="@+id/textV_home_share"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_share" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_join"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_directions_bike" />

                <TextView
                    android:id="@+id/textV_home_join"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_join" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_home_more_vert"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"
                    android:layout_below="@+id/edit_profil_phone"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_more_vert" />

                <TextView
                    android:id="@+id/textV_home_more_vert"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="@string/home_more_vert" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
