<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="fr.bicyclopresto.bicyclopresto_bike_fix.Fragment_when_alt">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/when_alt_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_when_alt_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/fragment_when_alt" />

            <EditText
                android:id="@+id/edit_when_alt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_when_alt_titre"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/when_alt_date_hint"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/edit_when_alt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_when_alt_date"
                android:layout_alignStart="@+id/edit_when_alt_date"
                android:layout_alignLeft="@+id/edit_when_alt_date"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/when_alt_time_hint"
                android:inputType="textPersonName" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/edit_when_alt_time"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_when_alt_save"
                    android:layout_width="@dimen/button_margin"
                    android:layout_height="@dimen/button_margin"

                    android:layout_centerInParent="true"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="18dp"
                    android:background="@drawable/roundedbutton"
                    android:src="@drawable/ic_menu_forward" />
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

                <!-- android:datePickerMode="spinner"
            android:layout_width="@dimen/button_margin"
                android:layout_height="@dimen/button_margin"-->







    <!--
    <?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment_when_alt">

         TODO: Update blank fragment layout
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" />

    </FrameLayout>
    -->